syntax = "proto3";

package helloworld;

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloResponse) {}

  rpc BiDirectionStreamHello (stream HelloRequest) returns (stream HelloResponse) {}

  rpc ClientStreamHello (stream HelloRequest) returns (HelloResponse) {}

  rpc ServerStreamHello (HelloRequest) returns (stream HelloResponse) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloResponse {
  string message = 1;
}
